MDEV-34589 pass error from ha_rollback_trans() to trans_rollback_stmt()

Storage engine handler rollback may fail, in which case
ha_rollback_trans() should indicate failure too, otherwise the
dastatus may be inconsistent.