sql/handler.cc
@@ -2141,7 +2141,6 @@ int ha_rollback_trans(THD *thd, bool all)
       handlerton *ht= ha_info->ht();
       if ((err= ht->rollback(ht, thd, all)))
       {
-        // cannot happen
         my_error(ER_ERROR_DURING_ROLLBACK, MYF(0), err);
         error=1;
 #ifdef WITH_WSREP
